--- a/layouts/template.html
+++ b/layouts/template.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+ 
 {% for page in site.pages %}
-    <a href={{ page.filename }}>{{ page.title }}</a>
+<a href={{ page.filename }}>{{ page.title }}</a>
 {% endfor %}
+<a href="Home">
+
+<p>{{ content }}</p>
+</body>
+</html>
+
