--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,9 +4,11 @@
   <h1>Hello World</h1>
  
   {% for page in site.pages %}
-   <a href={{ page.filename }}>{{ page.title }}</a>
+  	<a href=howto>How To</a>
+   	<a href={{ page.filename }}>{{ page.title }}</a>
   {% endfor %}
- <a href="Home">
+  <a href="Home">
+ 	
 
 <p>{{ content }}</p>
 </body>
