--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,7 +4,7 @@
 	<meta charset="uft-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Welcome to Alexander Tsuetaki's Fiefdom</title>
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="_config.yml">
 </head>
 
 <body>
