--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout:default
 ---
 
 <!DOCTYPE html>
@@ -7,8 +7,8 @@ layout: default
 	<head>
 		<meta charset="uft-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Welcome to Alexander Tsuetaki's Fiefdom</title>
-		<link rel="stylesheet" href="../_config.yml">
+		<title>{{ page.title }} - {{site.title}}</title>
+  		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 	</head>
 
 	<body>
