--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -12,9 +12,9 @@ layout:default
 
 	<body>
 		<header>	
-			{% for page in site.pages %}
-				<a href={{ page.filename }}>{{ page.title }}</a>
-			{% endfor %}
+			<a href="1-index.md">Home</a>
+			<a href="2-about_me.md">About Me</a>
+			<a href="3-projects.md">Projects</a>
 		</header>
 		{{ content }}
 	</body>
